--- a/src/main/resources/static/im_index/style/index.css
+++ b/src/main/resources/static/im_index/style/index.css
@@ -1,4 +1,4 @@
-body { font-family:'Hiragino Sans GB','Microsoft Yahei',sans-serif,Arial; margin:0 auto; padding:0;-webkit-font-smoothing:antialiased;background:#EDF0F4;}
+body { font-family:'Hiragino Sans GB','Microsoft Yahei',sans-serif,Arial; margin:0 auto; padding:0;-webkit-font-smoothing:antialiased;/*background:#EDF0F4;*/background:#fff;}
 div, form, ul, ol, li, span, p, dl, dt, dd,th,td,select,input,textarea,h1, h2, h3, h4, h5, h6{ margin:0; padding:0;}
 img, a img {border:0; margin:0; padding:0;}
 li { list-style:none;}
