--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -34,6 +34,7 @@
     </style>
     <SCRIPT type=text/javascript>
         var _speedMark = new Date();
+        document.domain = 'fang.com';
     </SCRIPT>
     <!--<script src="../static/js/jquery-1.7.2.min.js"></script>-->
 </head>
@@ -146,25 +147,25 @@ document.write(year);
   All Rights Reserved.</SPAN></P>
     </DIV>
 
-    <SCRIPT src="/js/CateNav.js"></SCRIPT>
+    <!--<SCRIPT src="/js/CateNav.js"></SCRIPT>-->
 
-    <SCRIPT type=text/javascript>
-        $(function () {
-            $.CateNav('#art-content', '#Catalog-box');//第一个参数为存放文章内容的box,第二个参数为存放生成目录的box
-            if (document.body.clientWidth < 1300) {
-                $(".page-right").addClass("hide")
-            }
+    <!--<SCRIPT type=text/javascript>-->
+        <!--$(function () {-->
+            <!--$.CateNav('#art-content', '#Catalog-box');//第一个参数为存放文章内容的box,第二个参数为存放生成目录的box-->
+            <!--if (document.body.clientWidth < 1300) {-->
+                <!--$(".page-right").addClass("hide")-->
+            <!--}-->
 
-        })
-    </SCRIPT>
+        <!--})-->
+    <!--</SCRIPT>-->
 
     <SCRIPT>TA_STATS_ARGS = {}</SCRIPT>
 
 
     <LINK rel=stylesheet href="../css/tomorrow.css">
-    <SCRIPT src="/js/jquery.highlight.js"></SCRIPT>
+    <SCRIPT src="../js/jquery.highlight.js"></SCRIPT>
 
-    <SCRIPT>hljs.initHighlightingOnLoad();</SCRIPT>
+    <!--<SCRIPT>hljs.initHighlightingOnLoad();</SCRIPT>-->
 </DIV>
 
 </body>
