--- a/src/main/resources/templates/dataItem/im-list.html
+++ b/src/main/resources/templates/dataItem/im-list.html
@@ -11,8 +11,21 @@
     <!--<script type="text/javascript" th:src="@{/table/js/bootstrap-table-all.min.js}"></script>-->
     <!--<script type="text/javascript" th:src="@{/table/js/bootstrap-table-zh-CN.min.js}"></script>-->
 </head>
-<BODY class=technology-integr style="width: 1000px"><!-- 头部 S -->
-<SCRIPT>var _speedMark = Date.now()</SCRIPT>
+<BODY class=technology-integr style="max-width: 1000px"><!-- 头部 S -->
+<SCRIPT>
+    var _speedMark = Date.now();
+    (function (win) {
+        var wH = window.innerWidth;
+        var body = document.body;
+        if (wH > 1400) {
+            body.style.maxWidth = '1400px';
+        } else if (window.innerWidth >= 1200) {
+            body.style.maxWidth = '1200px';
+        }else {
+            body.style.maxWidth = '1000px';
+        }
+    })(window);
+</SCRIPT>
 <script>
     $(function(){
         $("#passportid").val((GetQueryString("passportid")));
@@ -318,7 +331,7 @@
         <p>&nbsp;</p>
 
 
-    <div class="panel" style="margin-top: 82px">
+    <div class="panel" style="margin-top: 108px">
 
         <!--<div id="description" class="des mb10">此工具旨在帮助开发者埋码的时候检测定义的页面名称是否重复</div>-->
         <!--<table id="service-report" class="table table-striped table-bordered table-hover "></table>-->
