--- a/src/main/resources/templates/dataItem/im-uvcount-services1.html
+++ b/src/main/resources/templates/dataItem/im-uvcount-services1.html
@@ -5,7 +5,21 @@
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet" media="screen">
 </head>
 
-<SCRIPT>var _speedMark = Date.now()</SCRIPT>
+<BODY class=technology-integr style="max-width: 1000px"><!-- 头部 S -->
+<SCRIPT>
+    var _speedMark = Date.now();
+    (function (win) {
+        var wH = window.innerWidth;
+        var body = document.body;
+        if (wH > 1400) {
+            body.style.maxWidth = '1400px';
+        } else if (window.innerWidth >= 1200) {
+            body.style.maxWidth = '1200px';
+        }else {
+            body.style.maxWidth = '1000px';
+        }
+    })(window);
+</SCRIPT>
 <script>
 
 //    var cityData1;
@@ -20,7 +34,11 @@
         })
 
         $("#count_time").click(function(){
-            window.open("../dataItem/im-uvcount-times");
+            window.parent.dmp_util.toHref({
+                name: '城市业务转化量随时间变化',
+                href: 'http://bigdata.fang.com/meta/dataItem/im-uvcount-times'
+            });
+//            window.open("../dataItem/im-uvcount-times");
         })
     })
 
@@ -76,8 +94,7 @@
         r = null;
         return context == null || context == "" || context == "undefined" ? "" : context;
     }
-    // 设置domain
-    document.domain = 'fang.com';
+
 </script>
 <DIV class=header th:include="common::commontop" style="height: 60px">
 
