--- a/src/main/resources/templates/common2000.html
+++ b/src/main/resources/templates/common2000.html
@@ -18,7 +18,7 @@
     <script type="text/javascript" th:src="@{/js/jquery-2.1.1.min.js}"></script>
     <!--<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>-->
 
-    <script type="text/javascript" th:src="@{/js/jquery.highlight.js}"></script>
+    <!--<script type="text/javascript" th:src="@{/js/jquery.highlight.js}"></script>-->
     <!--bootstrap-table-->
     <script type="text/javascript" th:src="@{/js/bootstrap.js}"></script>
 
@@ -33,6 +33,8 @@
         }
     </style>
     <SCRIPT type=text/javascript>
+//        document.domain = 'dmp.test.fang.com';
+        document.domain = 'fang.com';
         var _speedMark = new Date();
     </SCRIPT>
     <!--<script src="../static/js/jquery-1.7.2.min.js"></script>-->
@@ -146,25 +148,25 @@
   <!--All Rights Reserved.</SPAN></P>-->
     </DIV>
 
-    <SCRIPT src="/js/CateNav.js"></SCRIPT>
+    <!--<SCRIPT src="/js/CateNav.js"></SCRIPT>-->
 
-    <SCRIPT type=text/javascript>
-        $(function () {
-            $.CateNav('#art-content', '#Catalog-box');//第一个参数为存放文章内容的box,第二个参数为存放生成目录的box
-            if (document.body.clientWidth < 1300) {
-                $(".page-right").addClass("hide")
-            }
+    <!--<SCRIPT type=text/javascript>-->
+        <!--$(function () {-->
+            <!--$.CateNav('#art-content', '#Catalog-box');//第一个参数为存放文章内容的box,第二个参数为存放生成目录的box-->
+            <!--if (document.body.clientWidth < 1300) {-->
+                <!--$(".page-right").addClass("hide")-->
+            <!--}-->
 
-        })
-    </SCRIPT>
+        <!--})-->
+    <!--</SCRIPT>-->
 
     <SCRIPT>TA_STATS_ARGS = {}</SCRIPT>
 
 
-    <LINK rel=stylesheet href="/css/tomorrow.css">
-    <SCRIPT src="/js/jquery.highlight.js"></SCRIPT>
+    <!--<LINK rel=stylesheet href="/css/tomorrow.css">-->
+    <!--<SCRIPT src="/js/jquery.highlight.js"></SCRIPT>-->
 
-    <SCRIPT>hljs.initHighlightingOnLoad();</SCRIPT>
+    <!--<SCRIPT>hljs.initHighlightingOnLoad();</SCRIPT>-->
 </DIV>
 
 </body>
