--- a/src/main/resources/templates/dataItem/im-uvcount-services1.html
+++ b/src/main/resources/templates/dataItem/im-uvcount-services1.html
@@ -96,7 +96,7 @@
     }
 
 </script>
-<DIV class=header th:include="common::commontop" style="height: 60px">
+<!--<DIV class=header th:include="common::commontop" style="height: 60px">-->
 
 </DIV><!-- 头部 E --><!-- 内容 [[ -->
 <!-- 主区域 [[ -->
@@ -136,7 +136,7 @@
                 <!--</select>-->
             <!--</div>-->
         <!--</div>-->
-        <div class="form-group col-lg-2">
+        <div class="form-group col-lg-2" style="width: 278px;">
             <div id="demo">
                 <!--<span>单选</span>-->
                 <!--<div id="cityDanXuan" style="width:300px;">-->
@@ -152,7 +152,7 @@
             </div>
         </div>
 
-        <div class="form-group col-lg-2">
+        <div class="form-group col-lg-2" style="width: 220px">
             <div class="input-group">
                 <span class="input-group-addon">业务分类</span>
                 <select id="imServiceType" class="form-control"  >
@@ -163,7 +163,7 @@
                 </select>
             </div>
         </div>
-        <div class="form-group col-lg-3">
+        <div class="form-group col-lg-3" style="width: 298px">
             <div class="input-group">
                 <span class="input-group-addon">开始时间</span>
                 <div class="input-group date form_date " data-date="" data-date-format="yyyy-mm-dd" data-link-field="dtp_input2" data-link-format="yyyy-mm-dd">
@@ -174,7 +174,7 @@
             </div>
             <input type="hidden" id="dtp_input1" value="" /><br/>
         </div>
-        <div class="form-group col-lg-3">
+        <div class="form-group col-lg-3" style="width: 298px">
             <div class="input-group">
                 <span class="input-group-addon">结束时间</span>
                 <div class="input-group date form_date" data-date="" data-date-format="yyyy-mm-dd" data-link-field="dtp_input2" data-link-format="yyyy-mm-dd">
