--- a/src/main/resources/templates/dataItem/im-uvcount-times.html
+++ b/src/main/resources/templates/dataItem/im-uvcount-times.html
@@ -94,7 +94,7 @@
     }
 
 </script>
-<DIV class=header th:include="common::commontop" style="height: 60px">
+<!--<DIV class=header th:include="common::commontop" style="height: 60px">-->
 
 </DIV><!-- 头部 E --><!-- 内容 [[ -->
 <!-- 主区域 [[ -->
