--- a/src/main/resources/templates/dataItem/im-analyse-list.html
+++ b/src/main/resources/templates/dataItem/im-analyse-list.html
@@ -44,12 +44,12 @@
         $("#starttime").val(formateyesterday());
         $("#endtime").val(formateyesterday());
 
-        addPageData();
+        addPageData(1);
         addCount();
 
         $("#search_btn").click(function(){
 //            alert($("#shopId").val());
-            addPageData();
+            addPageData(1);
             addCount();
         })
     })
@@ -89,8 +89,8 @@
             type :"get",
             dataType : "JSON",
             data : {
-                startTime:$("#starttime").val().replace("-","").replace("-",""),
-                endTime:$("#endtime").val().replace("-","").replace("-",""),
+                startTime:$("#starttime").val(),
+                endTime:$("#endtime").val(),
                 city: $city,
                 pagetype:null,
                 producttype:null
@@ -108,7 +108,7 @@
             }
         })
     }
-    function addPageData(){
+    function addPageData(pageNum){
         var $city = $("#city").val();
 //        var $imChatMessageType = $("#imChatMessageType").val();
         $.ajax({
@@ -121,26 +121,36 @@
                 city: $city,
                 pagetype:null,
                 producttype:null,
-                pageNum: 1,
+                pageNum: pageNum,
                 pageSize: 50,
             }, success: function(data){
-                for(var i=0;i<data.length;i++){
-                    var taskHtml = '';
-                    for (i = 0; i < data.length; i++) {
-                        taskHtml += '<tr >';
-                        taskHtml += '<td style="display: none" class="im-more">' + data[i].messageid + '</td>';
-                        taskHtml += '<td>' + data[i].from + '</td>';
-                        taskHtml += '<td>' + data[i].producttype + '</td>';
-                        taskHtml += '<td>' + data[i].pagetype + '</td>';
-                        taskHtml += '<td>' + data[i].to + '</td>';
-                        taskHtml += '<td>' + data[i].contents + '</td>';
-                        taskHtml += '<td style="display: none">' + data[i].actionday + '</td>';
-                        taskHtml += '<td> <a href="../im-analyse-more/'+data[i].messageid+'/'+data[i].actionday+'"target="view_window">详情</a></td>';
-                        taskHtml += '</tr>';
-                    }
-                    $('#myTable tbody').html(taskHtml);
-                    tableClick();
+                var taskHtml = '';
+                for (i = 0; i < data.recordList.length; i++) {
+                    taskHtml += '<tr >';
+                    taskHtml += '<td style="display: none" class="im-more">' + data.recordList[i].messageid + '</td>';
+                    taskHtml += '<td>' + data.recordList[i].from + '</td>';
+                    taskHtml += '<td>' + data.recordList[i].producttype + '</td>';
+                    taskHtml += '<td>' + data.recordList[i].pagetype + '</td>';
+                    taskHtml += '<td>' + data.recordList[i].to + '</td>';
+                    taskHtml += '<td>' + data.recordList[i].contents + '</td>';
+                    taskHtml += '<td style="display: none">' + data.recordList[i].actionday + '</td>';
+                    taskHtml += '<td> <a href="../im-analyse-more/'+data.recordList[i].messageid+'/'+data.recordList[i].actionday+'"target="view_window">详情</a></td>';
+                    taskHtml += '</tr>';
                 }
+                $('#myTable tbody').html(taskHtml);
+
+                var pagehtml = '<li><a href="javascript:void(0)" onclick="addPageData('+(pageNum-1>0?pageNum-1:1)+')">&laquo;</a></li>';
+                for(i = data.beginPageIndex; i <= data.endPageIndex; i++){
+                    if(i==pageNum){
+                        pagehtml+='<li class="active"><a href="javascript:void(0)" onclick="addPageData('+i+')">'+i+'</a></li>';
+                    }else{
+                        pagehtml+='<li ><a href="javascript:void(0)" onclick="addPageData('+i+')">'+i+'</a></li>';
+                    }
+
+                }
+                pagehtml+= '<li><a href="javascript:void(0)" onclick="addPageData('+(pageNum+1>data.pageCount?data.pageCount:pageNum+1)+')">&raquo;</a></li>';
+
+                tableClick();
             }, error: function () {
                 alert("获取数据失败", "error");
             }
@@ -334,6 +344,15 @@
                             </tbody>
                         </TABLE>
 
+                        <ul class="pagination" style="margin-left: 80%" id="pagenum">
+                            <li><a href="javascript:void(0)" onclick="addPageData()">&laquo;</a></li>
+                            <li class="active"><a href="javascript:void(0)" onclick="addPageData(1)">1</a></li>
+                            <li><a href="javascript:void(0)" onclick="addPageData(2)">2</a></li>
+                            <li><a href="javascript:void(0)" onclick="addPageData(3)">3</a></li>
+                            <li class="disabled"><a href="javascript:void(0)">...</a></li>
+                            <li><a href="javascript:void(0)" onclick="addPageData(5)">5</a></li>
+                            <li><a href="javascript:void(0)" onclick="addPageData()">&raquo;</a></li>
+                        </ul>
                     </DIV>
                 </DIV>
             </div>
