--- a/src/main/resources/templates/dataItem/im-list.html
+++ b/src/main/resources/templates/dataItem/im-list.html
@@ -159,6 +159,7 @@
                 }
                 pagehtml+= '<li><a href="javascript:void(0)" onclick="addPageData('+(pageNum+1>data.pageCount?data.pageCount:pageNum+1)+')">&raquo;</a></li>';
                 $("#pagenum").html(pagehtml);
+                $(window).scrollTop(0);
             }, error: function () {
                 alert("获取数据失败", "error");
             }
